# voicevox-openai-tts

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.aivis-speech-api-only.yaml  docker-compose.aivis-speech-api-only.yml  docker-compose.aivis-speech.yaml  docker-compose.aivis-speech.yml  docker-compose.gpu.yaml  docker-compose.gpu.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
example/: requirements.txt  simple_tts_example.py  tts_example.py
src/voicevox_openai_tts/: main.py  settings.py
src/voicevox_openai_tts/api/: create_app.py  voice_mappings.py
src/voicevox_openai_tts/api/routers/: speech.py  voices.py
src/voicevox_openai_tts/api/schemas/: speech.py  voices.py
src/voicevox_openai_tts/services/: __init__.py  speech.py  tts.py  voice.py
tests/: test_settings.py
tests/api/: test_integration.py
tests/services/: test_speech.py  test_voice.py
voice_mappings/: voicevox.json
voicevox_tts_api/: main.py
voicevox_tts_api/api/: __init__.py  create_app.py  voice_mappings.py
voicevox_tts_api/api/routers/: core.py  models.py  speech.py  voices.py
