[project]
name = "voicevox-openai-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0,<4.0.0", # 非同期HTTP通信用
    "fastapi>=0.68.0,<0.69.0",
    "pydantic>=1.8.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0", # JWT認証用（オプション）
    "python-multipart>=0.0.5,<0.0.6",
    "requests>=2.26.0,<3.0.0",
    "uvicorn>=0.15.0,<0.16.0",
]

[project.optional-dependencies]
example = [
    "loguru>=0.7.3",
    "openai>=1.101.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

# [project.scripts]

[tool.uv.build-backend]
module-root = ""
module-name = "voicevox_tts_api"

[tool.pylint]
# lint only unsupported features on py39
disable = ["all"]
enable = ["F", "E"]
py-version = "3.9"
ignored-modules = []
ignore-paths = []

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.ruff]
extend-include = []
extend-exclude = []
# Assume Python 3.9
target-version = "py39"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Same as pyupgrade
extend-select = ["UP", "D"]
ignore = [
    "F",
    "E",
    "D1",
    "D200",
    "D205",
    "D212",
    "D415",
]
unfixable = ["D"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"
