[project]
name = "voicevox-openai-tts"
version = "0.1.0"
description = "OpenAI-compatible TTS bridge for VOICEVOX and AivisSpeech"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic>=1.8.0,<2.0.0",
    "uvicorn>=0.15.0,<0.16.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
example = [
    "loguru>=0.7.3",
    "openai>=1.101.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.12.10",
]

# [project.scripts]

[tool.uv.build-backend]
module-root = "src"
module-name = "voicevox_openai_tts"

[tool.pylint]
# lint only unsupported features on py313
disable = ["all"]
enable = ["F", "E"]
py-version = "3.13"
ignored-modules = []
ignore-paths = []

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.ruff]
extend-include = []
extend-exclude = []
# Assume Python 3.13
target-version = "py313"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Same as pyupgrade
extend-select = ["UP", "D"]
ignore = [
    "F",
    "E",
    "D1",
    "D200",
    "D205",
    "D212",
    "D415",
]
unfixable = ["D"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
